src/objects/Account_MSA__c.object
<CustomObject>
    <description>Account Metropolitan Statistical Area by Zip Code</description>
    <fields>
        <fullName>MSA_Number__c</fullName>
        <label>MSA Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Metropolitan_Statistical_Area__c</fullName>
        <label>Metropolitan Statistical Area (MSA)</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <label>Zip Code</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Account MSA</label>
    <nameField>
        <displayFormat>MSA-{00000}</displayFormat>
        <label>Account MSA Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Accounts MSAs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>